# kinect_tracking

./: .gitignore
src/: .rosinstall
src/tigrillo_tracking/: .gitignore  CMakeLists.txt  package.xml  setup.py
src/tigrillo_tracking/data/: tf_calib.pkl
src/tigrillo_tracking/src/tigrillo_tracking/: camshift.py  drawing.py  geometry.py  rotation.py  utils.py
